--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,7 @@ jobs:
     steps:
       - uses: kofmj/kofmj.github.io@v1
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
+          SSH_PRIVATE_KEY: ${{ secrets.kofmj_gitee }}
         with:
-          source-repo: "git@github.com:wearerequired/git-mirror-action.git"
-          destination-repo: "git@bitbucket.org:wearerequired/git-mirror-action.git"
+          source-repo: "git@github.com:kofmj/kofmj.github.io.git"
+          destination-repo: "git@gitee.com:kofmj/kofmj.github.io.git"
